kubernetes/clusters/my-cluster/kubernetes-native/paintman/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paintman
  labels:
    name: paintman
