kubernetes/clusters/my-cluster/kubernetes-native/paintman/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paintman-db
  namespace: spoolman
spec:
  type: ClusterIP
  selector:
    app: paintman-db
  ports:
  - port: 5432
    targetPort: 5432
