kubernetes/clusters/my-cluster/kubernetes-native/paintman/paintman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paintman-ingress
  namespace: paintman
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
  - host: paintman.lan
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: paintman-frontend-service
            port:
              number: 7912
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paintman-frontend-service
            port:
              number: 7912
